fix(frontend,activity): right-align author
In member/subscription activities.

[skip ci pytest]

--- a/frontend/src/component/Activity/MemberActivity.styl
+++ b/frontend/src/component/Activity/MemberActivity.styl
@@ -18,3 +18,4 @@
     font-size fontSizeSmall
     text-align right
     white-space nowrap
+    align-items flex-end
